# Searching-algorithms

./: CMakeLists.txt
Google_tests/: CMakeLists.txt  searchingTests.cpp  searchingTests.h
include/: interpolationSearchStrategy.h  jumpSearchStrategy.h  linearSearchStrategy.h  searchingStrategy.h
src/: interpolationSearchStrategy.cpp  jumpSearchStrategy.cpp  linearSearchStrategy.cpp  main.cpp  searchingStrategy.cpp
